<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StudyBuddy</string>

    <string name="login_button">LOG IN</string>
    <string name="login_login">Login</string>
    <string name="login_email">" "Email</string>
    <string name="login_password">" "Password</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_signup">Don\'t have an account? |</string>
    <string name="login_signup2">" "Sign up</string>
    <string name="login_rememberMe">Remember Me</string>

    <string name="signup_signup">Signup</string>
    <string name="signup_button">SIGN UP</string>
    <string name="signup_email">" "Email</string>
    <string name="signup_username">" "Username</string>
    <string name="signup_password">" "Create Password</string>
    <string name="signup_confirm_password">" "Confirm Password</string>
    <string name="signup_terms">I agree with the Terms and Conditions and the Privacy Policy</string>
    <string name="signup_login">Already have an account? |</string>
    <string name="signup_login2">" "Log in</string>


    <string name="home_nav_newTask">NewTask</string>
    <string name="home_nav_logout">logout</string>
    <string name="home_home">Home</string>
    <string name="home_schedule">Schedules</string>
    <string name="home_tasks">Tasks</string>

    <string name="schedule_schedule">Schedule</string>
    <string name="Classes">Classes</string>
    <string name="Holidays">Holidays</string>

    <string name="task_task">Task</string>
    <string name="task_complete">Complete</string>
    <string name="task_incomplete">Incomplete</string>

    <string name="settings_settings">Settings</string>

    <string name="add_task">Add Task</string>
    <string name="new_task_cancel">Cancel</string>
    <string name="new_task_save">Save</string>
    <string name="new_task_subject">School Subject</string>
    <string name="new_task_inputSubject">Input subject</string>
    <string name="new_task_date">Due Date:</string>
    <string name="new_task_due">Deadline</string>

    <string-array name="spinner_category">
        <item>Homework</item>
        <item>Exam</item>
        <item>Project</item>
    </string-array>

    <string-array name="spinner_priority">
        <item>Top</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="spinner_addSchedule">
        <item>Class</item>
        <item>Holiday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>