<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/signup_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/serenity"
        android:fontFamily="serif"
        android:letterSpacing=".2"
        android:shadowColor="@color/black"
        android:shadowRadius=".1"
        android:text="@string/signup_button"
        android:textColor="#3949AB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/email_24"
        android:drawableTint="@color/material_dynamic_neutral60"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/signup_email"
        android:inputType="text|textAutoComplete"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/person_24"
        android:drawableTint="@color/material_dynamic_neutral60"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/signup_username"
        android:inputType="text|textAutoComplete"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:cursorVisible="true"
        android:drawableStart="@drawable/lock_24"
        android:drawableTint="@color/material_dynamic_neutral60"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/signup_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    <TextView
        android:id="@+id/signup_textView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/signup_login"
        android:textColor="#3949AB"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/signup_terms"
        android:textColor="#3949AB"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:shadowColor="@color/black"
        android:shadowRadius=".1"
        android:text="@string/signup_signup"
        android:textColor="#3949AB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:cursorVisible="true"
        android:drawableStart="@drawable/lock_24"
        android:drawableTint="@color/material_dynamic_neutral60"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/signup_textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:shadowColor="#00ACC1"
        android:shadowRadius=".5"
        android:text="@string/signup_login2"
        android:textColor="#3949AB"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signup_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>